# snp

./: Cargo.toml  README.md
src/: error.rs  lib.rs  util.rs
src/certs/: cert.rs  chain.rs  mod.rs
src/certs/builtin/: mod.rs
src/certs/builtin/genoa/: mod.rs
src/certs/builtin/milan/: ark.pem  ask.pem
src/certs/ca/: mod.rs
src/certs/ecdsa/: mod.rs
src/firmware/: mod.rs
src/firmware/guest/: mod.rs  types.rs
src/firmware/host/: mod.rs  types.rs
src/firmware/linux/: mod.rs
src/firmware/linux/guest/: ioctl.rs  mod.rs  types.rs
src/firmware/linux/host/: ioctl.rs  macros.rs  mod.rs  types.rs
src/launch/: mod.rs  snp.rs
src/launch/linux/: ioctl.rs  mod.rs  snp.rs
tests/: api.rs  certs.rs  guest.rs  launch.rs
